[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.setuptools.packages.find]
where = ["."]
include = ["lab_driver", "example"]
exclude = ["hardware"]
namespaces = false


[tool.hatch.build.targets.wheel]
packages = ["lab_driver"]


[project]
name = "lab_driver_daq"
version = "0.2.2"
description = "Python API for handling Measurement Devices for Enabling automated Testing"
readme = "README.md"
license =  {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
  {name = "Andreas Erbsloeh", email = "andreas.erbsloeh@uni-due.de"},
]
maintainers = [
    {name = 'Ismail Yilmaz', email = 'ismail.yilmaz@stud.uni-due.de'}
]
dependencies = [
    "numpy>=2.2.2",
    "pyserial>=3.5",
    "pyvisa>=1.14.1",
    "pyvisa-py>=0.7.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rsinstrument>=1.90.0",
    "tqdm>=4.67.1",
    "zeroconf>=0.141.0",
]
